[tool.poetry]
name = "rvg-tts"
version = "0.1.0"
description = ""
authors = ["Foxify52 <93794624+Foxify52@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-win_amd64.whl#sha256=5ee2b7c19265b9c869525c378fcdf350510b8f3fc08af26da1a2587a34cea8f5"}
fairseq = "0.12.2"
faiss-cpu = "1.7.3"
inflect = "7.0.0"
librosa = "0.9.1"
numpy = "1.23.5"
phonemizer = "3.2.1"
scipy = "1.9.3"
soundfile = "0.12.1"
tensorboardx = "2.6.1"
torchcrepe = "0.0.20"
unidecode = "1.3.6"
webrtcvad = "2.0.10"
gradio = "^4.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
